--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   display: none;
 }
 .box .overbox{
-  background-color: #304562;
+  background-color: rgba(48, 69, 98, 0.75);
   position: absolute;
   top: 0;
   left: 0;
@@ -20,8 +20,8 @@
   transition: all 300ms ease-out;
   opacity: 0;
   width: 100%;
-  height: 240px;
-  padding: 130px 20px;
+  height: 190px;
+  padding: 20px 20px;
 }
 .box:hover .overbox{
   opacity: 1;
